--- a/base/static/style.css
+++ b/base/static/style.css
@@ -49,7 +49,7 @@ body {
 
 .content-section,
 .list-group-item {
-    background-color: #E3E8ED;
+    background-color: #C1CCD7;
 }
 
 input[type=text]:focus,
