--- a/posts/templates/posts/_post_base.html
+++ b/posts/templates/posts/_post_base.html
@@ -1,4 +1,4 @@
-<div class="content-section post mr-0">
+<div class="content-section post mr-0" id="post-{{post.pk}}">
     <div class="row">
         <div class="col-auto pr-0">
             <a href="{% url 'accounts:view_account' post.user.profile.slug %}">
