--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -20,11 +20,18 @@
             {% include "navbar.html" %}
         </header>
         <main class="container">
-            <div class="row">
+            <div class="new-post-success row text-center" style="display: none;">
+                <div class="col-12 pr-1 pl-1">
+                    <div class="alert alert-success" role="alert">
+                        Your Post has been successfully created.
+                    </div>
+                </div>
+            </div>
+            <div class="alert-message row">
                 <div class="col-12 pr-1 pl-1">
                     {% if messages %}
                         {% for message in messages %}
-                            <div class="alert alert-{{ message.tags }} text-center">
+                            <div class="success alert alert-{{ message.tags }} text-center">
                                 {{ message }}
                             </div>
                         {% endfor %}
