--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -90,7 +90,7 @@
                                     <a class="btn btn-link btn-sm post-edit pr-0" href="{% url 'posts:edit_post' post.slug %}">
                                         Edit
                                     </a>
-                                    <button class="btn btn-link btn-sm post-delete pl-0" data-href="{% url 'posts:delete_post' post.slug %}" data-toggle="modal" data-target="#confirmDelete{{ post.slug }}">
+                                    <button class="btn btn-link btn-sm post-delete test2" data-toggle="modal" data-target="#confirmDeletePost{{ post.slug }}">
                                         Delete
                                     </button>
                                     {% include "posts/delete_post_confirm.html" %}
