--- a/posts/templates/posts/_new_post_form.html
+++ b/posts/templates/posts/_new_post_form.html
@@ -1,7 +1,7 @@
 <form method="POST" class="new-post-form-ajax">
     {% csrf_token %}
     <div class="input-group mb-1">
-        {{ form.title }}
+        {{ post_form.title }}
         <div class="input-group-append">
             <button class="btn btn-outline-info newPost" type="submit">
                 Post
@@ -9,6 +9,6 @@
         </div>
     </div>
     <div class="form-group new-post">
-        {{ form.body }}
+        {{ post_form.body }}
     </div>
 </form>
