--- a/posts/templates/posts/_post_base.html
+++ b/posts/templates/posts/_post_base.html
@@ -47,13 +47,33 @@
             </p>
         </div>
         <div class="col-12 text-right new-view-comment">
-            <a href="{% url 'posts:view_post' post.slug %}">
-                Leave a comment
-            </a>
-            <br>
-            <a href="{% url 'posts:view_post' post.slug %}">
-                View post comments ({{ post.comments.all.count }} comments )
-            </a>
+            <button type="button" class="btn btn-link btn-sm new-comment-btn" data-newcomment-btn-id="{{ post.id }}">
+                Comment
+            </button>
+            <button type="button" class="btn btn-link btn-sm view-comments-btn" data-viewcomments-btn-id="{{ post.id }}">
+                View Comments ({{ post.comments.all.count }})
+            </button>
         </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12 view-comments hidden pt-1 pb-4" data-viewcomments-id="{{ post.id }}">
+        <ul class="list-group">
+            <li class="list-group-item text-center sidebar-header">
+                Comments
+            </li>
+            {% for comment in post.comments.all %}
+                <li class="list-group-item">
+                    {% include "posts/_comment_base.html" %}
+                </li>
+            {% empty %}
+                <li class="list-group-item text-center">
+                    This post has no comments yet...
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="col-12 pt-0 hidden pt-1 pb-4 new-comment-form" data-newcomment-form-id="{{ post.id }}">
+        {% include "posts/_new_comment_form.html" %}
     </div>
 </div>
