--- a/posts/templates/posts/_comment_base.html
+++ b/posts/templates/posts/_comment_base.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row py-2" id="test-{{ comment.pk }}">
     <div class="col-auto pr-0">
         <a href="{% url 'accounts:view_account' comment.author.profile.slug %}">
             {% if comment.author.profile.image %}
@@ -15,8 +15,8 @@
             </a>
         </div>
     </div>
-    <div class="col-12 pt-2">
-        <p class="post-body">
+    <div class="col-12 pt-2 pb-0">
+        <p class="post-body comment">
             {{ comment.body }}
         </p>
     </div>
@@ -33,7 +33,7 @@
     {% endif %}
 
     <div class="col-12 text-right">
-        <small class="text-muted">
+        <small class="comment-date">
             {{ comment.date_posted|date:"g:i A - d M Y" }}
         </small>
     </div>
