--- a/posts/templates/posts/_posts_base.html
+++ b/posts/templates/posts/_posts_base.html
@@ -1,3 +1,5 @@
-{% for post in posts %}
-    {% include "posts/_post_base.html" %}
-{% endfor %}
+<div class="posts">
+    {% for post in posts %}
+        {% include "posts/_post_base.html" with comments_count=post.comments.all.count %}
+    {% endfor %}
+</div>
