--- a/posts/templates/posts/_post_editable_content.html
+++ b/posts/templates/posts/_post_editable_content.html
@@ -1,6 +1,6 @@
 <div class="col-12 pt-4">
     <h4 class="post-title">
-        <a href="{% url 'posts:view_post' post.slug %}">
+        <a href="{% url 'posts:view_post' post.pk %}">
             {{ post.title }}
         </a>
     </h4>
