--- a/posts/templates/posts/_post_link.html
+++ b/posts/templates/posts/_post_link.html
@@ -1,5 +1,5 @@
 <small>
-    <a class="text-muted" href="{% url 'posts:view_post' post.slug %}">
+    <a class="text-muted" href="{% url 'posts:view_post' post.pk %}">
         {{ post.date_posted|date:"g:i A - d M Y" }}
     </a>
 </small>
