--- a/posts/templates/posts/delete_comment_confirm.html
+++ b/posts/templates/posts/delete_comment_confirm.html
@@ -1,5 +1,5 @@
 <div class="modal fade pt-5" id="confirmDeleteComment{{ comment.pk }}" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteCommentLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title text-danger" id="confirmDeleteCommentLabel">
@@ -19,7 +19,7 @@
                     {% else %}
                         {{ comment.post.user }}
                     {% endif %}
-                </span>?
+                </span>Post?
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
