--- a/posts/templates/posts/delete_post_confirm.html
+++ b/posts/templates/posts/delete_post_confirm.html
@@ -1,5 +1,5 @@
 <div class="modal fade pt-5" id="confirmDeletePost{{ post.pk }}" tabindex="-1" role="dialog" aria-labelledby="confirmDeletePostLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title text-danger" id="confirmDeletePostLabel">
