Made add/delete functions run without refreshing the remaining posts/comments
1. Adding new comment/post removes the 'There are no posts/comments' text.
2. Deleting comment/post returns the 'There are no posts/comments' text.
3. new comment/post hides then fades in.
4. Deleted comment/post slides up.
5. Follow/unfollow buttons of the same size.

--- a/base/static/style.css
+++ b/base/static/style.css
@@ -28,6 +28,10 @@ body {
     font-weight: bold;
 }
 
+.following-btn {
+    width: 100px;
+}
+
 .post-author a:hover {
     color: #527EA3;
     text-decoration: none;
