--- a/posts/templates/posts/view_post.html
+++ b/posts/templates/posts/view_post.html
@@ -12,5 +12,6 @@
     </div>
 {% endblock content %}
 {% block scripts %}
+    <script src="{% static 'main.js' %}"></script>
     <script src="{% static 'posts/main.js' %}"></script>
 {% endblock scripts %}
