--- a/posts/templates/posts/delete_post_confirm.html
+++ b/posts/templates/posts/delete_post_confirm.html
@@ -11,7 +11,7 @@
             </div>
             <div class="modal-body text-center">
                 <span class="text-danger">
-                    Are you sure you want to delete this post
+                    Are you sure you want to delete
                 </span>
                 <span class="post-title">
                     {{ post.title }}
@@ -19,7 +19,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <form id="post-delete-form" action="{% url 'posts:delete_post' post.pk %}" method="POST">
+                <form class="post-delete-form" method="POST" data-post-delete-form="{{ post.pk }}">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-danger post-delete-confirm">
                         Delete
