Fixed follow button js code repeatition with different functionalities in home and view_account pages

--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -30,7 +30,7 @@
                                 </div>
                                 {% if profile.user != request.user %}
                                     <div class="col text-right">
-                                        {% include "accounts/_follow_base.html" with is_following=False %}
+                                        {% include "posts/_home_follow_base.html" with is_following=False %}
                                     </div>
                                 {% endif %}
                             </div>
