decreased post editable content x-padding

--- a/posts/templates/posts/_post_base.html
+++ b/posts/templates/posts/_post_base.html
@@ -35,7 +35,7 @@
             </div>
             {% include "posts/delete_post_confirm.html" %}
         {% endif %}
-        <div class="post-editable-content col-12 pt-3">
+        <div class="post-editable-content col-12 pt-3 pb-2 pr-2 pl-2">
             {% include "posts/_post_editable_content.html" %}
         </div>
         <div class="col-12 text-center new-view-comment">
